# Verilog-Linter-App

./: README.md  Verilog_linter_console_app.cpp
VerilogLinter/: ArithmeticOverflowChecker.cpp  ArithmeticOverflowChecker.h  BlockChecker.cpp  BlockChecker.h  CMakeLists.txt  CaseChecker.cpp  CaseChecker.h  FSMChecker.cpp  FSMChecker.h  FileDisplayer.cpp  FileDisplayer.h  LatchChecker.cpp  LatchChecker.h  ParserEngine.cpp  ParserEngine.h  UninitialisedChecker.cpp  UninitialisedChecker.h  VerilogLintChecker.cpp  VerilogLintChecker.h  main.cpp  main.qml
